Defining tests in .razor files works pretty good now

--- a/sample/ComponentLib/Component1.razor
+++ b/sample/ComponentLib/Component1.razor
@@ -1,3 +1,6 @@
-﻿<div class="my-component">
+﻿@code {
+    public bool AccessibleProp { get; } = true;
+}
+<div class="my-component">
     This Blazor component is defined in the <strong>ComponentLib</strong> package.
 </div>
