--- a/sample/ComponentLibTests/Component1Test.razor
+++ b/sample/ComponentLibTests/Component1Test.razor
@@ -1,5 +1,8 @@
-﻿<Fact>
-    <Setup><Component1 /></Setup>
+﻿@inherits RazorComponentTest
+<Fact>
+    <Setup>
+        <Component1 />
+    </Setup>
     <ExpectedOutput>
         <div class="my-component">
             This Blazor component is defined in the <strong>ComponentLib</strong> package.
