--- a/sample/ComponentLibTests/_Imports.razor
+++ b/sample/ComponentLibTests/_Imports.razor
@@ -1,5 +1,8 @@
-﻿@inherits Egil.RazorComponents.Testing.RazorComponentTest
+﻿@*_Imports.razor*@
+@inherits Egil.RazorComponents.Testing.RazorComponentTest
 
+@using Microsoft.Extensions.DependencyInjection
+@using Microsoft.JSInterop
 @using Xunit
 @using Moq
 @using Shouldly
