--- a/sample/RazorComponentLibTests/_Imports.razor
+++ b/sample/RazorComponentLibTests/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@*_Imports.razor*@
-@inherits Egil.RazorComponents.Testing.RazorComponentTest
+﻿@inherits Egil.RazorComponents.Testing.RazorComponentTest
 
 @using Microsoft.Extensions.DependencyInjection
 @using Microsoft.JSInterop
