--- a/sample/RazorComponentLibTests/AlertTests.razor
+++ b/sample/RazorComponentLibTests/AlertTests.razor
@@ -90,6 +90,7 @@ and re-render, use the component reference syntax and the Render method.
 BUG: Currently @@ref doesn't actually generate the required backing field: https://github.com/aspnet/AspNetCore/issues/13099
 
 @code {
+    Alert sut;
     bool isVisible = true;
 
     [Fact(DisplayName = "When Visible is toggled to false, all child content is removed from alert")]
@@ -98,16 +99,16 @@ BUG: Currently @@ref doesn't actually generate the required backing field: https
         // initial assert
         var result = RenderResults.Single(x => x.Id == (nameof(DismissTest)));
         result.RenderedHtml.ShouldBe(result.Snippets[0]);
-        //Assert.Equal(true, sut.Visible); BUG: https://github.com/aspnet/AspNetCore/issues/13099
+        Assert.Equal(true, sut.Visible);
 
         // act
         isVisible = false;
         this.Render();
 
-        // dismiss assert
+        // assert
         var dismissResult = RenderResults.Single(x => x.Id == (nameof(DismissTest)));
         dismissResult.RenderedHtml.ShouldBe(result.Snippets[1]);
-        //Assert.Equal(false, sut.Visible); BUG: https://github.com/aspnet/AspNetCore/issues/13099
+        Assert.Equal(false, sut.Visible);
     }
 }
 <Fact Id=@nameof(DismissTest)>
