Implemented better regex attribute comparison syntax

--- a/tests/SelfClosingTagsRenderTest.razor
+++ b/tests/SelfClosingTagsRenderTest.razor
@@ -1,5 +1,4 @@
-﻿@inherits Egil.RazorComponents.Testing.RazorComponentTest
-@using Egil.RazorComponents.Testing
+﻿@inherits RazorComponentTest
 
 <Fact DisplayName="Self-closing tags are compared correctly">
     <TestSetup>
