Fixture component, TestComponentBase first draft done

--- a/tests/CanInjectServices.razor
+++ b/tests/CanInjectServices.razor
@@ -1,4 +1,4 @@
-﻿@inherits TestComponentBase
+﻿@*@inherits TestComponentBase
 @using Microsoft.Extensions.DependencyInjection
 @using Microsoft.JSInterop
 @using Egil.RazorComponents.Testing.Mocks
@@ -10,4 +10,4 @@
     <Expect>
         <div class="alert fade show" role="alert">HELLO WORLD ALERT</div>
     </Expect>
-</Snapshot>
+</Snapshot>*@
