--- a/tests/CanRunSingleTestCase.razor
+++ b/tests/CanRunSingleTestCase.razor
@@ -1,4 +1,4 @@
-﻿@inherits TestComponentBase
+﻿@*@inherits TestComponentBase
 
 <Snapshot Description="Can do simple snapshot testing">
     <Given>
@@ -7,4 +7,4 @@
     <Expect>
         <h1 attr="bar">foo</h1>
     </Expect>
-</Snapshot>
+</Snapshot>*@
