--- a/tests/SampleComponents/Wrapper.razor
+++ b/tests/SampleComponents/Wrapper.razor
@@ -1,4 +1,4 @@
 ﻿@ChildContent
 @code{
-    [Parameter] public RenderFragment ChildContent { get; set; }
+    [Parameter] public RenderFragment ChildContent { get; set; } = default!;
 }
