--- a/sample/src/Components/TodoItem.razor
+++ b/sample/src/Components/TodoItem.razor
@@ -1,6 +1,6 @@
 ﻿<li class="list-group-item list-group-item-action">
     <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" @bind=@Todo.IsDone>
+        <input type="checkbox" class="custom-control-input" @bind=@Todo.IsDone />
         <label class="custom-control-label">@Todo.Text</label>
         <a class="float-right" href="#">(x)</a>
     </div>
