--- a/sample/src/_Imports.razor
+++ b/sample/src/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using Egil.RazorComponents.Testing.Library.SampleApp
 @using Egil.RazorComponents.Testing.Library.SampleApp.Shared
+@using Egil.RazorComponents.Testing.Library.SampleApp.Data
+@using Egil.RazorComponents.Testing.Library.SampleApp.Components
