--- a/sample/src/Pages/Counter.razor
+++ b/sample/src/Pages/Counter.razor
@@ -2,7 +2,9 @@
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>
+    Current count: @currentCount
+</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
