--- a/sample/src/Shared/NavMenu.razor
+++ b/sample/src/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Egil.RazorComponents.Testing.Library.SampleApp</a>
+    <a class="navbar-brand" href="">Testing SampleApp</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,6 +20,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="todolist">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Todo list
             </NavLink>
         </li>
     </ul>
