Added various tools and methods for testing Todos

--- a/sample/src/Shared/NavMenu.razor
+++ b/sample/src/Shared/NavMenu.razor
@@ -23,8 +23,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="todolist">
-                <span class="oi oi-circle-check" aria-hidden="true"></span> Todo list
+            <NavLink class="nav-link" href="todos">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Todos
             </NavLink>
         </li>
     </ul>
