--- a/sample/src/Components/TodoItem.razor
+++ b/sample/src/Components/TodoItem.razor
@@ -1,10 +1,27 @@
-﻿<li class="list-group-item list-group-item-action">
-    <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" @bind=@Todo.IsDone />
-        <label class="custom-control-label">@Todo.Text</label>
-        <a class="float-right" href="#">(x)</a>
-    </div>
+﻿<li class="list-group-item list-group-item-action" @onclick="Complete">
+    <span>@Todo.Text</span>
+    <span class="float-right text-danger">(click to complete)</span>
 </li>
 @code {
-    [Parameter] public Todo Todo { get; set; } = default!;
+    private Todo _todo = Todo.Empty;
+
+    [Parameter]
+    public Todo Todo
+    {
+        get => _todo;
+        set => _todo = value ?? throw new ArgumentNullException(nameof(Todo));
+    }
+
+    [Parameter] public EventCallback<int> OnCompleted { get; set; }
+
+    protected override void OnParametersSet()
+    {
+        if (Todo == Todo.Empty)
+            throw new ArgumentException($"The {nameof(Todo)} parameter was not set.");
+    }
+
+    private void Complete()
+    {
+        OnCompleted.InvokeAsync(Todo.Id);
+    }
 }
