--- a/sample/src/Pages/Index.razor
+++ b/sample/src/Pages/Index.razor
@@ -3,3 +3,12 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<CascadingValue Value="theme" IsFixed="true">
+    <ThemedButton>TEST TEST TEST</ThemedButton>
+</CascadingValue>
+
+
+@code {
+    private ThemeInfo theme = new ThemeInfo { Class = "btn btn-primary" };
+}
