lots of updates to docs and child content/params handling

--- a/sample/src/Components/ThemedButton.razor
+++ b/sample/src/Components/ThemedButton.razor
@@ -1,4 +1,4 @@
-﻿<button class=@(Theme?.Class ?? "") @attributes="Attributes">
+﻿<button class=@(Theme?.Value ?? "NO-THEME") @attributes="Attributes">
     @ChildContent
 </button>
 @code {
@@ -6,7 +6,7 @@
     public IReadOnlyDictionary<string, object> Attributes { get; set; }
 
     [CascadingParameter]
-    public ThemeInfo Theme { get; set; }
+    public ThemeInfo? Theme { get; set; }
 
     [Parameter]
     public RenderFragment ChildContent { get; set; }
