--- a/sample/src/Pages/Index.razor
+++ b/sample/src/Pages/Index.razor
@@ -10,5 +10,5 @@ Welcome to your new app.
 
 
 @code {
-    private ThemeInfo theme = new ThemeInfo { Class = "btn btn-primary" };
+    private ThemeInfo theme = new ThemeInfo { Value = "btn btn-primary" };
 }
