--- a/sample/tests/MixedTests/ThemedButtonTest.razor
+++ b/sample/tests/MixedTests/ThemedButtonTest.razor
@@ -11,7 +11,7 @@
 </Fixture>
 
 @code {
-    private ThemeInfo theme = new ThemeInfo { Class = "btn btn-secondary" };
+    private ThemeInfo theme = new ThemeInfo { Value = "btn btn-secondary" };
 
     void Test(IRazorTestContext context)
     {
