Started mixed-mode tests

--- a/sample/src/Pages/Index.razor
+++ b/sample/src/Pages/Index.razor
@@ -4,11 +4,4 @@
 
 Welcome to your new app.
 
-<CascadingValue Value="theme" IsFixed="true">
-    <ThemedButton>TEST TEST TEST</ThemedButton>
-</CascadingValue>
-
-
-@code {
-    private ThemeInfo theme = new ThemeInfo { Value = "btn btn-primary" };
-}
+<WikiSearch />
