--- a/sample/src/Pages/_Host.cshtml
+++ b/sample/src/Pages/_Host.cshtml
@@ -18,5 +18,11 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script>
+        function queryWiki(query) {
+            return fetch('https://en.wikipedia.org/w/api.php?origin=*&action=opensearch&search=' + query)
+                .then(x => x.text());
+        }
+    </script>
 </body>
 </html>
