--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Egil.RazorComponents.Testing.EventDispatchExtensions
 @using Egil.RazorComponents.Testing.Library
 @using Egil.RazorComponents.Testing.Library.SampleApp
 @using Egil.RazorComponents.Testing.Library.SampleApp.Data
