--- a/tests/BlazorElementReferencesIncludedInRenderedMarkup.razor
+++ b/tests/BlazorElementReferencesIncludedInRenderedMarkup.razor
@@ -11,7 +11,7 @@
 
     void Test(IRazorTestContext context)
     {
-        var cut = context.RenderFragment();
+        var cut = context.GetFragment();
         
         var html = cut.GetMarkup();
 
