--- a/sample/src/Components/ForecastDataTable.razor
+++ b/sample/src/Components/ForecastDataTable.razor
@@ -1,6 +1,4 @@
-﻿@using Egil.RazorComponents.Testing.Library.SampleApp.Data
-
-<table class="table">
+﻿<table class="table">
     <thead>
         <tr>
             <th>Date</th>
