--- a/sample/src/_Imports.razor
+++ b/sample/src/_Imports.razor
@@ -1,11 +1,13 @@
-﻿@using System.Net.Http
+﻿@namespace Egil.RazorComponents.Testing.SampleApp
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Egil.RazorComponents.Testing.Library.SampleApp
-@using Egil.RazorComponents.Testing.Library.SampleApp.Shared
-@using Egil.RazorComponents.Testing.Library.SampleApp.Data
-@using Egil.RazorComponents.Testing.Library.SampleApp.Components
+@using Egil.RazorComponents.Testing
+@using Egil.RazorComponents.Testing.SampleApp
+@using Egil.RazorComponents.Testing.SampleApp.Data
+@using Egil.RazorComponents.Testing.SampleApp.Components
+@using Egil.RazorComponents.Testing.SampleApp.Shared
