--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -1,8 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Egil.RazorComponents.Testing
 @using Egil.RazorComponents.Testing.EventDispatchExtensions
-@using Egil.RazorComponents.Testing.Library
-@using Egil.RazorComponents.Testing.Library.SampleApp
-@using Egil.RazorComponents.Testing.Library.SampleApp.Data
-@using Egil.RazorComponents.Testing.Library.SampleApp.Components
-@using Egil.RazorComponents.Testing.Library.SampleApp.Pages
-
+@using Egil.RazorComponents.Testing.SampleApp
+@using Egil.RazorComponents.Testing.SampleApp.Data
+@using Egil.RazorComponents.Testing.SampleApp.Components
+@using Egil.RazorComponents.Testing.SampleApp.Pages
