--- a/sample/src/Components/NoArgs.razor
+++ b/sample/src/Components/NoArgs.razor
@@ -1,1 +1,5 @@
-﻿<h1>Hello world</h1>
+﻿<h1 @attributes="Attributes">Hello world</h1>
+@code {
+    [Parameter(CaptureUnmatchedValues = true)]
+    public IReadOnlyDictionary<string, object>? Attributes { get; set; }
+}
