updates to docs and samples

--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -5,3 +5,4 @@
 @using Egil.RazorComponents.Testing.SampleApp.Data
 @using Egil.RazorComponents.Testing.SampleApp.Components
 @using Egil.RazorComponents.Testing.SampleApp.Pages
+@using Xunit @*or e.g. Shouldly*@
